<resources>
    <string name="app_name">Saodat Asri</string>
    <string name="book_number">%1d -kitob</string>
    <string name="book_image">Book image</string>
    <string name="back_button_description">Back button</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Saodat Asri qissalari</string>
    <string name="nav_header_subtitle">Audio ko\'rinishida</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Barcha kitoblar</string>
    <string name="menu_gallery">Kitob haqida</string>
    <string name="menu_slideshow">Ilova haqida</string>
    <string name="share_friend">Do\'stlarga ulashish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ahmad_lutfiy_qozonchi">Ahmad Lutfiy Qozonchi</string>
    <string name="baxtiyor_mo_minov_o_qigan">Baxtiyor Moʻminov oʻqigan</string>
    <string name="default_notification_channel_id">NOTIFICATION_DEFAULT</string>
    <string name="notification">Xabarnoma</string>
    <string name="notification_off">Xabarnomani o‘chirish</string>
    <string name="notification_on">Xabarnomani yoqish</string>
    <string name="saved">Saqlash</string>
    <string name="view_id_admob">ca-app-pub-8886704371629930/3099067406</string>
    <string name="button_previous_description">Button previous</string>
    <string name="button_play_or_pause_description">Button play or pause</string>
    <string name="button_next_description">Button next</string>
    <string name="volume">Volume</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="download_description">Download</string>
    <string name="notification_channel_name">Saodat asri channel</string>
    <string name="notification_channel_description">Saodat asri notification description</string>
    <string name="app_download_channel_name">Saodat Asri donwload channel</string>
    <string name="app_download_channel_description">Saodat Asri fayl yuklash kanali</string>
    <string name="download_live_unsupported">download live unpsupported</string>
    <string name="download_start_error">download start error</string>
    <string name="download_start_error_offline_license">dowload start error offline license</string>
    <string name="error_drm_unsupported_before_api_18">error drm unsupported before api 18</string>
    <string name="exo_download_description">exo_download_description</string>
    <string name="track_selection_title">track_selection_title</string>
    <string name="exo_track_selection_title_video">exo_track_selection_title_video</string>
    <string name="exo_track_selection_title_audio">exo_track_selection_title_audio</string>
    <string name="exo_track_selection_title_text">exo_track_selection_title_text</string>
</resources>